<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>

            <Button
                android:id="@+id/btn_request_camera"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_camera" />

            <Button
                android:id="@+id/btn_request_contact"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_contact" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_request_location"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_location" />

            <Button
                android:id="@+id/btn_request_calendar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_calendar" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_request_microphone"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_microphone" />

            <Button
                android:id="@+id/btn_request_storage"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_storage" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_request_phone"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_phone" />

            <Button
                android:id="@+id/btn_request_sensors"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_sensors" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_request_sms"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_sms" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:text="@string/permission_setting" />
        </TableRow>
    </TableLayout>
</LinearLayout>
